--- a/develop-problem-C/docs/优化分析.md
+++ b/develop-problem-C/docs/优化分析.md
@@ -1,40 +1,37 @@
-﻿# 优化分析与敏感性
+﻿# 优化分析与敏感性（新版框架）
 
-本节聚焦模型稳定性、参数敏感性与可扩展性。
-
----
-
-## 1. 区间收缩（启发式正则）
-- **目的**：处理排名制赛季区间过宽、信息退化的情况。  
-- **策略**：以区间中点为中心进行对称收缩，收缩幅度与评委排名相关。  
-- **使用建议**：仅用于敏感性分析与保守估计，不作为主结果。
+本节聚焦 MCMC 稳定性、动态权重敏感性与可扩展性。
 
 ---
 
-## 2. 采样参数敏感性
-- 样本数过小会导致置信区间偏宽。
-- 建议：
-  - 快速测试：2,000–5,000 样本/淘汰
-  - 论文结果：≥ 10,000 样本/淘汰
+## 1. MCMC 采样参数
+- **样本数**：2,000–5,000 适合快速迭代；论文级建议 ≥ 8,000。
+- **burn-in 与 thin**：默认 burn-in=500, thin=5，兼顾稳定性与速度。
+- **时间平滑系数 \(\lambda\)**：
+  - \(\lambda\) 越大，周际变化越平滑；过大可能掩盖真实波动。
 
 ---
 
-## 3. 通过率与补采样
-- 拒绝采样通过率过低时，使用网格随机采样补充。
-- 通过率低通常意味着规则约束强，属于“高透明度周次”。
+## 2. 动态权重敏感性
+- 早期权重偏评委（\(\alpha\approx0.7\)）有利于剔除技术弱选手。
+- 后期逐步向观众倾斜（\(\alpha\to0.4\)）可增加参与感。
+- 若赛季周数偏少，可降低 pivot 周次以避免过度裁剪。
 
 ---
 
-## 4. 计算成本
-- LP/MILP 近似线性增长，可并行至多赛季。
-- MC 是主要成本，可通过：
-  - 降低 burn-in
-  - 增大 thin
-  - 分周并行
+## 3. 反事实评估稳定性
+- Kendall Tau 对细微排名变化敏感，需观察其周际均值波动。
+- 逆转率与孔多塞一致性可作为“鲁棒公平性”替代指标。
+
+---
+
+## 4. 特征分析鲁棒性
+- SHAP 图若出现过度噪声，可对子样本加权或采用 bootstrap。
+- 高基数类别（舞伴）建议做 Top-K 合并，避免稀疏噪声。
 
 ---
 
 ## 5. 后续优化方向
-- 引入更精准的评委拯救机制建模（基于历史投票行为）。
 - 引入外部人气代理（搜索指数/社媒数据）作为先验。
-- 针对低通过率周次启用自适应采样策略。
+- 采用自适应 MCMC（调整 Dirichlet 参数）以提高采样效率。
+- 在机制设计中加入“观众活跃度”代理变量，构建三目标帕累托。
