--- a/develop-problem-C/docs/运行与复现指南.md
+++ b/develop-problem-C/docs/运行与复现指南.md
@@ -1,10 +1,10 @@
-﻿# 运行与复现指南
+﻿# 运行与复现指南（新版框架）
 
 本指南描述模型一的完整复现流程与产出文件。
 
 ---
 
-## 1. 目录结构（精简版）
+## 1. 目录结构
 - `data/`：原始数据与补充数据
 - `src/`：核心模型代码
 - `scripts/`：主流程脚本
@@ -18,22 +18,28 @@
 建议使用主流程脚本：
 
 ```bash
-python scripts/run_full_pipeline.py --samples 5000
+python scripts/run_full_pipeline.py --mcmc-samples 4000 --burnin 800 --thin 5
 ```
 
 可选参数：
-- `--seasons "1-10"`：指定赛季区间
-- `--regularize`：启用排名制区间收缩（仅敏感性）
+- `--smooth-lambda 12`：增强时间平滑
+- `--skip-ml`：跳过 XGBoost+SHAP（依赖未安装时）
 - `--skip-compile`：仅生成图表，不编译 PDF
 
 ---
 
 ## 3. 关键输出
-- `outputs/mc_robustness_results.csv`
-- `outputs/mc_summary_statistics.tex`
-- `figures/mc_*.pdf`
+- `outputs/fan_vote_intervals.csv`
+- `outputs/fan_vote_posterior_summary.csv`
+- `outputs/counterfactual_summary.csv`
+- `outputs/counterfactual_summary_dynamic.csv`
+- `outputs/pareto_frontier.csv`
+- `outputs/feature_importance.csv`
 - `figures/fig_anomaly_detection.pdf`
 - `figures/bobby_bones_survival.png`
+- `figures/fig_pareto_frontier.pdf`
+- `figures/fig_shap_summary.pdf`
+- `figures/fig_shap_age_dependence.pdf`
 - `paper/en/PaperC/main.pdf`
 - `paper/zh/PaperC - Chinese/main.pdf`
 
@@ -41,11 +47,13 @@ python scripts/run_full_pipeline.py --samples 5000
 
 ## 4. 环境依赖
 - Python 3.10+
-- numpy, pandas, scipy, matplotlib, seaborn, tqdm
+- numpy, pandas, scipy, matplotlib, seaborn
+- xgboost, shap（用于特征分析）
 - LaTeX: xelatex + biber（推荐 latexmk）
 
 ---
 
 ## 5. 常见问题
-- **MC 通过率过低**：增大样本数或启用正则化进行对比。
-- **PDF 编译失败**：确保 LaTeX 工具链安装并可在命令行调用。
+- **MCMC 波动过大**：增大样本数或提高 \(\lambda\)。
+- **SHAP 图生成失败**：确认 xgboost 与 shap 版本可用。
+- **PDF 编译失败**：检查 LaTeX 工具链是否安装并可用。
