--- a/develop-problem-C/paper/en/PaperC/sections/01_intro.tex
+++ b/develop-problem-C/paper/en/PaperC/sections/01_intro.tex
@@ -1,11 +1,11 @@
-% Section 1: Introduction
+﻿% Section 1: Introduction
 
 \section{Introduction}
 \label{sec:intro}
 
 \subsection{Background}
 
-\textbf{Motivated by judge--fan disagreements} (e.g., S27 Bobby Bones), we treat \emph{Dancing with the Stars} (DWTS) as an \textbf{audit problem}: can scoring rules explain eliminations \emph{without fan vote data}?
+\textbf{Motivated by judge--fan disagreements} (e.g., S27 Bobby Bones), we treat \emph{Dancing with the Stars} (DWTS) as an \textbf{audit problem}: can scoring rules explain eliminations \emph{without fan vote data}'
 
 DWTS employs complex scoring mechanisms that have evolved significantly over 34 seasons (see \textbf{Figure \ref{fig:flowchart}}). This evolution creates a unique \emph{inverse problem}: reconstructing latent fan votes from partial information.
 
@@ -23,20 +23,18 @@ DWTS employs complex scoring mechanisms that have evolved significantly over 34 
 This paper addresses five interconnected audit questions:
 \begin{enumerate}[label=\arabic*., nosep, leftmargin=*]
     \item \textbf{Fan Vote Inference (Tasks 1--2):} Reconstruct feasible fan vote intervals from eliminations.
-    \item \textbf{Rule Change Impact (Task 2):} How do immunity, double eliminations, and saves affect inference?
-    \item \textbf{Success Factors (Task 3):} What predicts survival (profession, partner, fame)?
-    \item \textbf{Mechanism Evaluation (Task 4):} Does the current system produce ``fair'' outcomes?
-    \item \textbf{Mechanism Design (Task 5):} Can we improve fairness while maintaining engagement?
+    \item \textbf{Rule Change Impact (Task 2):} How do immunity, double eliminations, and saves affect inference'
+    \item \textbf{Success Factors (Task 3):} What predicts survival (profession, partner, fame)'
+    \item \textbf{Mechanism Evaluation (Task 4):} Does the current system produce ``fair'' outcomes'
+    \item \textbf{Mechanism Design (Task 5):} Can we improve fairness while maintaining engagement'
 \end{enumerate}
 
 \subsection{Contributions}
 
 \begin{enumerate}[itemsep=0.1em]
-    \item \textbf{Dual-Core Inversion Engine:} LP (percent seasons) + MILP (rank seasons) for fan vote inference with slack-based mismatch detection.
-    \item \textbf{Mismatch Detection:} S32/S33 identified with $S^* > 0$---structural audit gaps under stated rules.
-    \item \textbf{Survival Analysis:} Professional dancer is the dominant predictor (LRT $\chi^2 = 47.3$, $\Delta C = 0.09$).
-    \item \textbf{Weighted Percent Mechanism:} Reduces Definite-Wrongful eliminations from \textbf{40 to 3} ($-92.5\%$).
-    \item \textbf{Transparency Recommendations:} Actionable audit-trail improvements balancing entertainment and fairness.
+    \item \textbf{Dual-Core Inversion + Posterior Reconstruction:} LP/MILP yields feasible intervals; truncated Bayesian MCMC produces posterior means and HDIs.
+    \item \textbf{Rule Transparency Audit:} Slack-based diagnostics verify rule consistency across seasons.
+    \item \textbf{Counterfactual Evaluation:} Kendall Tau, reversal rate, and Condorcet checks quantify rule stability.
+    \item \textbf{Feature Attribution:} XGBoost + SHAP reveal the dominant drivers of survival.
+    \item \textbf{Dynamic Mechanism Design:} A judge-heavy-to-fan-heavy schedule balances fairness and engagement, supported by the Pareto frontier.
 \end{enumerate}
-
-
