--- a/develop-problem-C/paper/en/PaperC/sections/06_model3.tex
+++ b/develop-problem-C/paper/en/PaperC/sections/06_model3.tex
@@ -1,118 +1,58 @@
-% Section 6: Model 3 - Mechanism Design (Weighted Percent)
+﻿% Section 6: Model 3 - Feature Attribution and Mechanism Design
 
-\section{Model 3: Mechanism Design}
+\section{Model 3: Feature Attribution and Mechanism Design}
 \label{sec:model3}
 
-\noindent\textbf{\textit{This section addresses Tasks 4--5:}} We evaluate current mechanism fairness via interval-robust classification, then propose and optimize a Weighted Percent mechanism that reduces Definite-Wrongful eliminations by 92.5\% while preserving fan engagement.
+\noindent\textbf{\textit{This section addresses Tasks 3--4:}} We quantify how contestant attributes influence survival, then design a dynamic weighting mechanism guided by a Pareto frontier.
 
-We address: \textbf{Can we design a voting mechanism that improves fairness while maintaining engagement?}
+\subsection{Feature Attribution with XGBoost + SHAP}
 
-\subsection{Interval-Robust Fairness Classification}
-
-Point estimates $\hat{v}_i$ inherit uncertainty from LP bounds. To avoid overconfident claims, we classify eliminations into three categories using the \textbf{feasible interval} $[v_i^{\min}, v_i^{\max}]$:
-
-\begin{enumerate}[itemsep=0.2em]
-    \item \textbf{Definite-Safe ($\mathcal{D}_S$):} For \emph{all} feasible $v_i$, the eliminated contestant has below-median fan support \emph{or} below-median judge percentage.
-    
-    \item \textbf{Definite-Wrongful ($\mathcal{D}_W$):} For \emph{all} feasible $v_i$, the eliminated contestant has above-median support on \emph{both} dimensions:
-    \[
-        \mathcal{D}_W: \quad v_E^{\min} > \text{median}(\mathbf{v}) \;\land\; J_E^\% > \text{median}(\mathbf{J}^\%)
-    \]
-    
-    \item \textbf{Possible-Wrongful ($\mathcal{P}_W$):} Neither $\mathcal{D}_S$ nor $\mathcal{D}_W$---classification depends on the true (unknown) fan vote.
-\end{enumerate}
-
-\noindent\textbf{Implementation:} For each elimination, we check both interval endpoints against fairness criteria. This yields robust counts: 3 definite-wrongful ($\mathcal{D}_W$), 37 possible-wrongful ($\mathcal{P}_W$), 190 definite-safe ($\mathcal{D}_S$).
-
-\subsection{Candidate Mechanisms}
-
-\begin{enumerate}[itemsep=0.1em]
-    \item \textbf{Soft Floor:} $C_i^{\text{floor}} = \max(C_i, \theta)$ --- guarantees minimum score.
-    \item \textbf{Weighted Percent (Proposed):} 
-\end{enumerate}
-\begin{equation}
-    C_i^{\text{new}} = \alpha \cdot J_i^{\%} + (1-\alpha) \cdot v_i, \quad J_i^{\%} = \frac{J_i}{\sum_k J_k},
-\end{equation}
-where $\alpha = 0.6$. This is \emph{not} Borda (which uses ranks); we use normalized percentages.
-
-\subsection{The Fairness-Engagement Trade-off: Pareto Analysis}
-\label{subsec:pareto}
-
-A critical question: \textbf{Why $\alpha = 0.6$, and not 0.55 or 0.65?} We answer this by mapping the \textbf{Pareto frontier} between two competing objectives:
-
-\begin{itemize}[itemsep=0.1em]
-    \item \textbf{Fairness:} Minimize wrongful eliminations ($|\mathcal{D}_W|$)---contestants who deserve to stay should stay.
-    \item \textbf{Fan Engagement:} Preserve outcome uncertainty---if judges always decide, fans stop voting.
-\end{itemize}
-
-\noindent We measure engagement impact via the \textbf{Fan Influence Index}: the fraction of eliminations where fan votes (not just judges) determined the outcome. Higher $\alpha$ reduces fan influence; lower $\alpha$ increases wrongful eliminations.
+We predict contestant survival weeks using XGBoost and explain the model using SHAP values. Features include judge-score statistics, celebrity age, industry, and a top-$K$ professional partner bucket.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.85\textwidth]{figures/fig_pareto_frontier.jpg}
-    \caption{\textbf{The Sweet Spot: Pareto Frontier for Mechanism Design.} X-axis: Wrongful elimination rate. Y-axis: Fan influence index. Each point represents a different $\alpha$ value. The \textbf{$\alpha = 0.6$ configuration lies at the ``knee'' of the Pareto curve}---achieving 92.5\% reduction in wrongful eliminations while retaining 68\% of historical fan influence.}
+    \includegraphics[width=0.85\textwidth]{figures/fig_shap_summary.pdf}
+    \caption{\textbf{SHAP Summary.} Judge score statistics dominate, with notable partner effects and a nonlinear age contribution.}
+    \label{fig:shap_summary}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\textwidth]{figures/fig_shap_age_dependence.pdf}
+    \caption{\textbf{SHAP Dependence: Age.} The marginal contribution of age is nonlinear, revealing diminishing returns at the extremes.}
+    \label{fig:shap_age}
+\end{figure}
+
+\noindent\textbf{Key insight:} Technical performance (judge statistics) is the strongest driver, followed by professional partner effects; age contributes nonlinearly rather than monotonically.
+
+\subsection{Dynamic Adaptive Weighting}
+
+We propose a dynamic rule that shifts weight from judges to fans as the season progresses:
+\begin{equation}
+\alpha_w =
+\begin{cases}
+\alpha_0, & w \le 5,\\
+\alpha_0 - (\alpha_0-\alpha_T)\dfrac{w-5}{W-5}, & w > 5,
+\end{cases}
+\end{equation}
+with $(\alpha_0,\alpha_T)=(0.7,0.4)$.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\textwidth]{figures/fig_dynamic_weight_schedule.pdf}
+    \caption{\textbf{Dynamic Adaptive Weighting Schedule.} Early weeks emphasize judges; later weeks prioritize audience intent.}
+    \label{fig:dynamic_schedule}
+\end{figure}
+
+\subsection{Pareto Frontier}
+
+We evaluate static weights across $\alpha \in [0.3,0.8]$ and compute two objectives: \textit{judge alignment} (fairness) and \textit{fan influence}. \figref{fig:pareto} shows the trade-off.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.75\textwidth]{figures/fig_pareto_frontier.pdf}
+    \caption{\textbf{Pareto Frontier for Mechanism Design.} Each point is a different $\alpha$. The 60/40 rule yields judge alignment $\approx 0.50$ and fan influence $\approx 0.83$.}
     \label{fig:pareto}
 \end{figure}
 
-\begin{tcolorbox}[colback=dwts-proposed!10!white, colframe=dwts-proposed!80!black, title=\textbf{The ``60/40 Sweet Spot'' Explained}]
-At $\alpha = 0.6$, we achieve:
-\begin{itemize}[itemsep=0.1em]
-    \item \textbf{92.5\% reduction} in definite-wrongful eliminations (40 $\to$ 3)
-    \item \textbf{68\% fan influence retained}---fans still matter, just not overwhelmingly
-    \item \textbf{Robustness:} Performance stable across $\alpha \in [0.55, 0.65]$
-\end{itemize}
-This is the \textbf{Pareto-optimal balance point}---any further increase in judge weight yields diminishing fairness returns while rapidly eroding fan engagement.
-\end{tcolorbox}
-
-\subsection{Counterfactual Simulation}
-
-We replay all 230 elimination rounds under each mechanism:
-
-\begin{table}[H]
-    \centering
-    \caption{Mechanism Comparison (Interval-Robust Classification)}
-    \label{tab:mechanism_comparison}
-    \begin{tabular}{lcccc}
-        \toprule
-        \textbf{Mechanism} & \textbf{Param} & $|\mathcal{D}_W|$ & $|\mathcal{P}_W|$ & $|\mathcal{D}_S|$ \\
-        \midrule
-        Current System & 50/50 & 40 & -- & 190 \\
-        Soft Floor & $\theta=5\%$ & 94 & -- & 136 \\
-        \textbf{Weighted Percent} & $\alpha=0.6$ & \textbf{3} & 37 & 190 \\
-        \bottomrule
-    \end{tabular}
-\end{table}
-
-\noindent\textbf{Key Finding:} Under our interval-robust classification, Weighted Percent ($\alpha=0.6$) yields only \textbf{3 definite-wrongful} eliminations (down from 40 under current system). An additional 37 are ``possible-wrongful'' depending on true vote values within feasible bounds.
-
-We visualize mechanism outcomes in the Pareto analysis (\figref{fig:pareto}); the table above provides the exact counts used in our comparison.
-
-\subsection{Sensitivity to $\alpha$: The Optimal Range}
-
-\begin{table}[H]
-    \centering
-    \caption{\textbf{Judge Weight Sensitivity.} Definite-Wrongful count ($|\mathcal{D}_W|$) vs.\ judge weight $\alpha$. \textbf{Bold}: optimal range where fairness gains are maximized before eroding fan influence.}
-    \begin{tabular}{lccccccc}
-        \toprule
-        $\alpha$ & 0.3 & 0.4 & 0.5 & \textbf{0.55} & \textbf{0.60} & \textbf{0.65} & 0.7 \\
-        \midrule
-        $|\mathcal{D}_W|$ & 19 & 12 & 6 & \textbf{4} & \textbf{3} & \textbf{4} & 8 \\
-        Reduction vs.\ Current & 52\% & 70\% & 85\% & \textbf{90\%} & \textbf{92.5\%} & \textbf{90\%} & 80\% \\
-        \bottomrule
-    \end{tabular}
-\end{table}
-
-\noindent The U-shaped pattern reveals why $\alpha = 0.6$ is optimal: below 0.55, fans have too much power (more wrongful eliminations); above 0.65, judges dominate excessively (different wrongful patterns emerge where fan favorites are eliminated despite popularity).
-
-\subsection{Implementation Recommendation}
-
-\begin{tcolorbox}[colback=dwts-proposed!10!white, colframe=dwts-proposed!80!black, title=\textbf{Recommendation: The ``60/40 Strategy''}]
-We recommend adopting $\alpha = 0.6$ Weighted Percent scoring:
-\begin{enumerate}[itemsep=0.1em]
-    \item \textbf{Marketing:} ``60\% Skill, 40\% Popularity---Because Talent Matters''
-    \item \textbf{Impact:} Reduces definite-wrongful eliminations from 40 to 3 (92.5\% reduction)
-    \item \textbf{Robustness:} Stable performance across $\alpha \in [0.55, 0.65]$
-    \item \textbf{Fan Engagement:} Retains meaningful fan influence (68\% of historical levels)
-    \item \textbf{Transparency:} Simple, explainable formula audiences can understand
-\end{enumerate}
-\end{tcolorbox}
+\noindent\textbf{Recommendation:} Use dynamic weighting to preserve early technical screening while maintaining late-stage audience ownership.
