--- a/develop-problem-C/paper/zh/PaperC - Chinese/sections/memo_zh.tex
+++ b/develop-problem-C/paper/zh/PaperC - Chinese/sections/memo_zh.tex
@@ -1,10 +1,10 @@
-﻿% 备忘录：审计备忘录 (Audit Memorandum)
+﻿% 备忘录（中文）
 
 \newpage
 \thispagestyle{empty}
 
 \begin{center}
-\Large\textbf{审\quad 计\quad 备\quad 忘\quad 录}
+\Large\textbf{审计备忘录}
 \end{center}
 
 \vspace{0.5em}
@@ -12,63 +12,52 @@
 \vspace{0.3em}
 
 \begin{tabular}{@{}ll}
-\textbf{收件人：}  & 《与星共舞》（DWTS）执行制片人 \\
-\textbf{发件人：}  & Team \#2617892 --- 建模与审计小组 \\
-\textbf{日期：}    & 2026年1月30日 \\
-\textbf{主题：}    & \textbf{透明度风险评估与规则改进建议}
+\textbf{收件人：} & 《与星共舞》执行制片人 \\
+\textbf{发件人：} & Team \#2617892 --- 建模与审计组 \\
+\textbf{日期：} & 2026 年 1 月 30 日 \\
+\textbf{主题：} & \textbf{规则审计与动态赛制建议}
 \end{tabular}
 
 \vspace{0.3em}
 \noindent\rule{\textwidth}{1.5pt}
 \vspace{0.8em}
 
-\subsection*{执行摘要}
+\subsection*{摘要}
 
-我们对《与星共舞》全部 34 个赛季的淘汰结果进行了独立审计。本次分析旨在回答一个核心问题：\textbf{在不观测具体观众投票份额的情况下，节目发布的评分规则能否解释所观测到的淘汰结果？}
+我们基于双核反演与贝叶斯后验重建，对 34 季淘汰结果进行审计。核心问题：\textbf{在不可观测粉丝票的情况下，规则是否足以解释淘汰结果？}
 
-在 34 个赛季中，有 32 个赛季的回答是\textbf{肯定}的  我们的数学模型找到了与所有结果一致的可行观众投票分布。然而，\textbf{第32和33赛季}存在结构性不匹配：在既定规则下，没有任何可行的投票分配能完全复现观测到的淘汰结果。
+\textbf{结论为“是”。} 所有赛季在规则约束下均可解释（$S^*=0$）。但规则可解释并不等于确定性——部分周次仍存在较宽的不确定区间。
 
-\subsection*{核心发现（审计视角）}
-
-自第28赛季引入评委拯救（Judges' Save）环节以来，节目产生了一层\textbf{决策不透明性}：虽然播出的倒数两名程序是规则驱动的，但最终淘汰取决于未以可验证形式披露的定性标准。这并不意味着存在违规操作，但它通过使某些结果在单纯基于规则的模型下\textbf{不可复现}，从而\textbf{增加了审计风险}。
-
-\subsection*{三大主要发现}
+\subsection*{三项关键发现}
 
 \begin{enumerate}[itemsep=0.2em]
-    \item \textbf{近期赛季的模型-数据不匹配} \\
-    第32和33赛季在我们的优化框架中表现出正松弛量（$S^* > 0$），表明在文档记录的规则下，无法通过任何可行的投票分配来解释其实际结果。可能原因：评委拯救标准基于未披露的因素（如进步程度、艺术表现力），而评分逻辑未能捕捉这些因素。\textit{影响：这些赛季的审计追踪不完整。}
+    \item \textbf{规则透明度良好。} \newline
+    $S^*$ 全季为 0，说明公开规则足以解释结果。
     
-    \item \textbf{粉丝动员带来的结构性脆弱性} \\
-    当前 50/50 的评委-观众比例允许即使技术得分极低的选手，也能凭借动员起来的粉丝群生存。第27赛季（Bobby Bones）便是明证：推断的投票区间显示，如果对手票数分散，选手仅凭约 25--30\% 的观众支持率即可晋级。\textit{影响：当前机制下存在竞赛公正性风险。}
+    \item \textbf{结构性不确定性仍在。} \newline
+    以 Bobby Bones 为例，后验 HDI 最大宽度约 0.46，表明 50/50 机制存在弱识别区。
     
-    \item \textbf{识别出 40 例确认的非预期淘汰} \\
-    利用区间稳健分类法，我们识别出历史上有 40 例淘汰案例，其中被淘汰选手在所有可行投票分配中，其评委得分\emph{及}估计观众支持率均高于中位数。通过机制调整，这一数字可降至 \textbf{3} 例。
+    \item \textbf{反事实稳定性。} \newline
+    Kendall 相关均值约 0.455、逆转率约 0.174。动态权重保持公平信号同时提升观众影响。
 \end{enumerate}
 
-\subsection*{政策建议：加权百分比机制}
-
-为了在不牺牲观众参与度的前提下提高透明度，我们建议：
+\subsection*{建议：动态自适应权重}
 
 \begin{itemize}[itemsep=0.1em]
-    \item \textbf{采用 60/40 权重：} $0.6 \times \text{评委百分比} + 0.4 \times \text{观众百分比}$
-    \item \textbf{预期影响：} 将确认的非预期淘汰从 40 例减少到 3 例（降幅 \textbf{92.5\%}）。
-    \item \textbf{稳健性：} 性能在 $\alpha \in [0.55, 0.65]$ 范围内保持稳定（位于帕累托拐点）。
-    \item \textbf{保留粉丝参与度：} 保留了 68\% 的历史观众影响力指数，确保观众依然拥有决定性。
+    \item \textbf{前期（1--5 周）：} 评委权重更高（\(\alpha \approx 0.7\)）。
+    \item \textbf{后期：} 逐步向观众倾斜（\(\alpha \to 0.4\)）。
+    \item \textbf{静态备选：} 60/40 为稳健基线。
 \end{itemize}
 
-\noindent 此外，建议报告最低限度的可验证信息（如倒数两名的具体构成），以提高审计追踪的完整性。
-
-\subsection*{范围与局限性说明}
+\subsection*{范围与限制}
 
 \begin{itemize}[itemsep=0.1em]
-    \item 我们从未观测到实际票数  分析产生的是\emph{可行区间}而非精确值。
-    \item 不匹配事件（$S^* > 0$）标志着\textbf{模型与数据的偏差}，而非操纵的证据。
-    \item 第27赛季后的规则细节主要根据问题描述推断，官方内部文档可能有所不同。
+    \item 粉丝票不可观测，只能给出后验区间。
+    \item 反事实评估假设粉丝行为不随规则改变。
 \end{itemize}
 
 \vspace{0.8em}
-\hfill\textbf{--- Team \#2617892, 建模与审计小组}
+\hfill\textbf{--- Team \#2617892 建模与审计组}
 
 \vspace{0.3em}
-\hfill\textit{详细技术方法见随附报告主体。}
-
+\hfill\textit{详细方法见附录。}
