--- a/develop-problem-C/paper/en/PaperC/sections/09_conclusion.tex
+++ b/develop-problem-C/paper/en/PaperC/sections/09_conclusion.tex
@@ -1,43 +1,37 @@
-% Section 9: Conclusions and Recommendations
-% 结论与建议
+﻿% Section 9: Conclusions and Recommendations
 
 \section{Conclusions}
 \label{sec:conclusion}
 
 \subsection{Summary of Findings}
 
-This paper developed a comprehensive framework for inferring fan votes from \emph{Dancing with the Stars} elimination data. Our key findings:
-
 \begin{enumerate}[itemsep=0.2em]
-    \item \textbf{Dual-Core Inversion:} Successfully reconstructed fan vote distributions for 32 of 34 seasons using hybrid LP/MILP with 100\% constraint satisfaction and median bound width of 8.3\%.
-    
-    \item \textbf{Model-Data Mismatch Detection:} Identified S32/S33 with constraint slack $S^* > 0$, revealing mathematical complexity introduced by Judges' Save mechanics. This is \emph{not} evidence of manipulation, but highlights modeling challenges in S28+ rules.
-    
-    \item \textbf{Professional Dancer Effect:} Survival analysis reveals professional partner as the dominant predictor (likelihood ratio test $\chi^2 = 47.3$, $p < 0.001$; C-index improvement $\Delta C = 0.09$)---larger effect than celebrity type or prior fame.
-    
-    \item \textbf{Weighted Percent System:} Proposed mechanism ($0.6J^\% + 0.4V$) reduces definite-wrongful eliminations from \textbf{40 to 3} under interval-robust classification.
+    \item \textbf{Dual-Core Inversion + Posterior Reconstruction:} LP/MILP yields feasible intervals; truncated Bayesian MCMC produces 2,250 contestant-week posteriors with median HDI width 0.268.
+    \item \textbf{Rule Transparency Audit:} Slack indicator $S^*$ remains at 0 across seasons, indicating consistency with published rules under our assumptions.
+    \item \textbf{Counterfactual Stability:} Mean Kendall's Tau $\approx 0.455$ and reversal rate $\approx 0.174$ quantify persistent but bounded judge--fan tension.
+    \item \textbf{Feature Attribution:} XGBoost + SHAP show judge-score statistics and partner effects dominate survival outcomes.
+    \item \textbf{Mechanism Design:} A dynamic adaptive weighting schedule balances fairness and fan influence, with 60/40 as a strong static baseline.
 \end{enumerate}
 
 \subsection{Recommendations}
 
 \begin{enumerate}[itemsep=0.2em]
-    \item \textbf{Pre-Broadcast Transparency:} Run LP/MILP solver before broadcast; flag episodes with $S^* > 0.5$ for producer review.
-    \item \textbf{Adopt Weighted Percent:} $\text{Score}_i = 0.6 \cdot J_i^\% + 0.4 \cdot V_i$ --- transparent ``60\% skill, 40\% popularity.''
-    \item \textbf{Judges' Save Transparency:} Document criteria for judge save decisions to reduce model-data mismatches.
+    \item \textbf{Pre-Broadcast Transparency:} Run the inversion audit before broadcast to identify high-uncertainty weeks.
+    \item \textbf{Adopt Dynamic Weighting:} Emphasize judges early (skill screening) and shift toward fans late (engagement).
+    \item \textbf{Judges' Save Clarity:} Publicly document save criteria to reduce perceived opacity.
 \end{enumerate}
 
 \subsection{Limitations}
 
 \begin{itemize}[itemsep=0.1em]
-    \item Unobserved heterogeneity (social media campaigns, news events).
-    \item Weaker bounds for rank-only seasons (S28--S34).
-    \item Cannot determine mismatch \emph{cause} (only detection).
-    \item Counterfactual assumes unchanged voting behavior.
+    \item Unobserved shocks (media events, campaign effects) are not modeled.
+    \item Rank-only seasons remain weakly identified despite MILP constraints.
+    \item Counterfactuals assume fan behavior is invariant to rule changes.
 \end{itemize}
 
 \subsection{Future Work}
 
-Future extensions: (1) real-time dashboard for producers, (2) international expansion to \emph{Strictly Come Dancing} and other franchises, (3) incorporating social media sentiment to tighten bounds.
+Future extensions include external popularity priors, adaptive MCMC proposals, and real-time producer dashboards.
 
 \vspace{0.5em}
-\noindent\textbf{Key Takeaway:} The current DWTS system produces 40 definite-wrongful eliminations across 230 rounds (17.4\%). Our Weighted Percent System reduces this to 3 (1.3\%)---a robust improvement verified by interval-based classification that accounts for fan vote estimation uncertainty.
+\noindent\textbf{Key Takeaway:} A rule-consistent Bayesian reconstruction enables fair, explainable audits and motivates a dynamic mechanism that balances skill and popularity.
