--- a/develop-problem-C/paper/zh/PaperC - Chinese/sections/00_abstract_zh.tex
+++ b/develop-problem-C/paper/zh/PaperC - Chinese/sections/00_abstract_zh.tex
@@ -1,20 +1,17 @@
-% 摘要 / 概要页
-% 摘要页（占第0页，不计入正文）
+﻿% 摘要 / 概要页
 
 \begin{abstract}
 
-\textbf{受评委与观众之间反复出现的争议（如第27季）启发，我们将《与星共舞》（DWTS）视为一个“审计问题”：} 能否在\textbf{从未观测到个人观众投票份额}的情况下，通过节目公布的评分规则解释观测到的淘汰结果？
+\textbf{受评委与观众反复争议启发，我们将《与星共舞》（DWTS）视为审计问题：} 在不可观测粉丝票的条件下，公开规则是否足以解释淘汰结果？
 
-为了回答这一问题，我们构建了一个\textbf{双核反演引擎}：(i) 通过\textbf{线性规划（LP）}重构百分比规则季（S3--S27）下的“可行观众投票区间”；(ii) 通过\textbf{混合整数线性规划（MILP）}推断排名规则季（S1--S2, S28--S34）下的“仅排名观众置换”。随后，我们利用最小松弛指标 $S^*$ 来量化\textbf{模型与数据的不匹配}，从而识别出无法通过任何可行投票分配来复现观测结果的情形。
+我们构建\textbf{双核反演引擎}：百分制赛季用 LP 反演可行区间，排名制赛季用 MILP 推断隐含粉丝排名。随后在区间上建立\textbf{截断贝叶斯后验}并用 MCMC 采样，引入时间平滑，同时仅保留能复现实测淘汰的样本。
 
-在对全部34季的研究中，我们的反演引擎在1%的容差范围内解释了\textbf{32个赛季（松弛量为零）}；仅有\textbf{S32--S33}表现出结构性不匹配（在声明的规则下不存在可行解）。可能的原因包括未记录的规则变动、未建模的评委拯救机制或多支舞蹈聚合方式的差异。
+后验重建覆盖 264 个淘汰周次、2,250 条选手-周估计。反事实评估给出 Kendall 相关均值约 0.455、逆转率约 0.174，显示赛制稳定但存在结构性张力。特征归因采用\textbf{XGBoost + SHAP}，表明评委分统计为最强驱动因素，舞伴效应与年龄呈非线性贡献。
 
-基于推断出的投票数据，\textbf{Cox生存分析}揭示：(1) 专业舞伴是主导性的生存预测因子（似然比检验 $\chi^2 = 47.3, p < 0.001$；Harrell's C指数提升 $\Delta C = 0.09$）；(2) 评委评分在早期轮次占主导，而观众投票势头则驱动后期结果。
-
-在机制设计方面，我们推荐的\textbf{加权百分比}方案（$0.6 \times \text{评委百分比} + 0.4 \times \text{观众百分比}$）在保持帕累托拐点附近观众影响力的同时，将\textbf{“确定性错误淘汰”}从40人减少到3人（降幅高达92.5%）。
+在机制设计上，我们提出\textbf{动态自适应权重}（前期偏评委、后期偏观众），并通过帕累托前沿展示公平性与参与度的平衡。60/40 为静态平衡点，动态方案在不削弱公平信号的前提下增强观众参与感。
 
 \begin{keywords}
-反问题；线性规划；混合整数规划；生存分析；机制设计
+贝叶斯推断；MCMC；线性规划；混合整数规划；XGBoost；SHAP；机制设计
 \end{keywords}
 
 \end{abstract}
