--- a/develop-problem-C/paper/zh/PaperC - Chinese/sections/01_intro_zh.tex
+++ b/develop-problem-C/paper/zh/PaperC - Chinese/sections/01_intro_zh.tex
@@ -1,40 +1,37 @@
-% 第1节：引言
+﻿% 引言（中文）
 
 \section{引言}
-\label{sec:intro}
+\label{sec:intro_zh}
 
-\subsection{研究背景}
+\subsection{背景}
 
-《与星共舞》（DWTS）是一项将名人与专业舞者配对的长期竞赛。尽管评委的评分是公开的，但决定淘汰结果的\textbf{个人观众投票份额从未被披露}。这种信息的不对称性催生了诸如第27季（Bobby Bones获胜引发巨大争议）及第32季评委拯救规则引发的长期公众讨论。从公开的计分规则和观测到的淘汰结果中逆推背后的观众偏好，构成了一个典型的\textbf{数学反问题}。
+\textbf{受评委与观众争议启发}（如 S27 Bobby Bones），我们将《与星共舞》视为审计问题：在不可观测粉丝票的条件下，公开规则是否足以解释淘汰结果？
 
-\begin{figure}[H]
+节目规则在 34 季中多次变化（见图 \ref{fig:flowchart}），因此需要在不同信息结构下进行反演。
+
+\begin{figure}[h]
     \centering
     \includegraphics[width=1.0\textwidth]{figures/figure1.jpg}
-    \vspace{-1em}
-    \caption{我们的反演引擎概览（左侧）与主要研究成果（右侧）：展示了从基于线性规划（LP）+ 混合整数规划（MILP）的观众投票推断到生存分析及机制设计的完整流程。}
-    \label{fig:intro_summary}
+    \vspace{-1.5em}
+    \caption{\textbf{分析框架。} 双核反演引擎在百分制与排名制赛季中重建隐藏粉丝票。}
+    \vspace{-1.0em}
+    \label{fig:flowchart}
 \end{figure}
 
-\subsection{问题陈述}
+\subsection{问题描述}
+\begin{enumerate}[label=\arabic*., nosep, leftmargin=*]
+    \item \textbf{反演粉丝票（任务1--2）：} 基于淘汰结果推断可行区间。
+    \item \textbf{规则变动影响（任务2）：} 免疫、双淘汰、评委拯救的影响。
+    \item \textbf{成功因素（任务3）：} 何种属性影响生存周数。
+    \item \textbf{机制评估（任务4）：} 现有赛制是否公平。
+    \item \textbf{机制设计（任务5）：} 如何优化公平性与参与度。
+\end{enumerate}
 
-本研究旨在解决以下五个核心任务：
-\begin{itemize}[nosep]
-    \item \textbf{观众投票推断：} 如何从各季（S1--S34）观测到的淘汰结果中反演开出的合理观众投票区间？
-    \item \textbf{规则演进评估：} 豁免权、双淘汰及评委拯救机制如何改变计分博弈的约束空间？
-    \item \textbf{生存因子识别：} 通过对推断数据的生存分析，哪些因素（舞伴、名气、评分）最能预测生存周期？
-    \item \textbf{机制效能审计：} 历史上哪些淘汰案例被视为“不公平”？这种不公平是系统性的吗？
-    \item \textbf{评分方案优化：} 能否通过机制设计降低“错误淘汰率”，同时兼顾收视率与专业公平性？
-\end{itemize}
-
-\vfill
-
-\subsection{我们的贡献}
-
-\begin{itemize}[nosep]
-    \item \textbf{双核反演引擎：} 开发了针对百分比规则（LP）和排名规则（MILP）的专用推断核。
-    \item \textbf{结构性不匹配识别：} 通过松弛指标分析，首次量化并指出了S32--S33季中存在的模型-数据不匹配现象。
-    \item \textbf{关键生存因子：} 发现专业舞伴的影响力（$\chi^2=47.3$）显著高于名人初始名气。
-    \item \textbf{帕累托优化机制：} 提出了加权百分比规则，将“确认的错误淘汰”数量减少了92.5%。
-\end{itemize}
-
-\clearpage
+\subsection{贡献}
+\begin{enumerate}[itemsep=0.1em]
+    \item \textbf{双核反演 + 后验重建：} LP/MILP 反演区间，截断贝叶斯 MCMC 输出均值与 HDI。
+    \item \textbf{规则透明度审计：} 通过松弛指标验证规则一致性。
+    \item \textbf{反事实评估：} Kendall 相关、逆转率与孔多塞一致性。
+    \item \textbf{特征归因：} XGBoost + SHAP 揭示关键生存因素。
+    \item \textbf{动态机制设计：} 评委权重前高后低，兼顾公平与参与。
+\end{enumerate}
