--- a/develop-problem-C/paper/zh/PaperC - Chinese/sections/09_conclusion_zh.tex
+++ b/develop-problem-C/paper/zh/PaperC - Chinese/sections/09_conclusion_zh.tex
@@ -1,32 +1,33 @@
-﻿% 第9节：结论与建议
+﻿% 结论（中文）
 
 \section{结论}
-\label{sec:conclusion}
+\label{sec:conclusion_zh}
 
-\subsection{研究发现总结}
-
-本文开发了一个综合框架，用于从《与星共舞》（DWTS）的淘汰数据中反演观众投票。主要发现如下：
-
+\subsection{主要结论}
 \begin{enumerate}[itemsep=0.2em]
-    \item \textbf{双核反演引擎：} 使用混合 LP/MILP 框架成功重构了 34 个赛季中 32 个赛季的观众投票分布，一致性达 100\%。
-    
-    \item \textbf{模型-数据不匹配监测：} 识别出第32和33赛季存在正松弛量（$S^* > 0$），揭示了评委拯救机制引入的数学复杂性。这种不匹配通过模型量化了决策的不透明性。
-    
-    \item \textbf{生存预测因子：} 生存分析证实，专业舞伴对成绩的提升效应（$\chi^2 = 47.3, p < 0.001$）远大于选手的背景职业或初始知名度。
-    
-    \item \textbf{机制改进效果：} 提议的加权百分比机制（$\alpha = 0.6$）在区间稳健分类下，将确认的非预期淘汰从 40 例大幅缩减至 3 例  \textbf{实现了 92.5\% 的公平性提升}。
+    \item \textbf{双核反演 + 后验重建：} LP/MILP 提供可行区间，截断贝叶斯 MCMC 输出 2,250 条后验估计，中位 HDI 宽度 0.268。
+    \item \textbf{规则透明度审计：} $S^*$ 在赛季层面为 0，规则可解释性良好。
+    \item \textbf{反事实稳定性：} Kendall 相关均值约 0.455，逆转率约 0.174。
+    \item \textbf{特征归因：} XGBoost + SHAP 表明评委分统计与舞伴效应最关键。
+    \item \textbf{机制设计：} 动态权重机制在公平性与参与度之间取得平衡。
 \end{enumerate}
 
-\subsection{对制片方的建议}
-
+\subsection{建议}
 \begin{enumerate}[itemsep=0.2em]
-    \item \textbf{实施审计协议：} 在每集播出前运行反演引擎。标记 $S^* > 0.5$ 的结果以供制作人二次审核，确保规则执行的一致性。
-    
-    \item \textbf{采用加权百分比评分：} 转为 $0.6 \times \text{评委\%} + 0.4 \times \text{观众\%}$ 的加权系统。其帕累托优越性在于保留 68\% 观众影响力的同时，消除了绝大部分的非预期淘汰风险。
-    
-    \item \textbf{量化评委拯救标准：} 明确并记录导致评委拯救决策的定性属性（如本周进步排名），以缩减审计不确定性区间。
+    \item \textbf{赛前审计：} 赛前运行反演与后验分析，定位高不确定周次。
+    \item \textbf{动态权重：} 前期偏评委、后期偏观众，兼顾筛选与参与。
+    \item \textbf{评委拯救透明化：} 公布判断准则以降低争议。
 \end{enumerate}
 
-\subsection{核心要点}
+\subsection{局限性}
+\begin{itemize}[itemsep=0.1em]
+    \item 未建模外部舆情冲击。
+    \item 排名制赛季仍存在弱识别问题。
+    \item 反事实假设粉丝行为不随规则变化。
+\end{itemize}
 
-当前 DWTS 投票系统在 230 轮淘汰中产生了 40 例确认的非预期淘汰（占 17.4\%）。\textbf{我们的加权百分比系统（$\alpha = 0.6$）将其降至仅 3 例（占 1.3\%）}  这一改进在允许观众保留强力发声权的同时，最大限度地捍卫了竞赛的技术严谨性。
+\subsection{未来工作}
+引入外部人气先验、自适应 MCMC，并构建实时审计面板。
+
+\vspace{0.5em}
+\noindent\textbf{结论要点：} 规则一致的贝叶斯重建可提供可解释、公平的审计结果，并支持动态赛制设计。
